# todomvc-tests1

./: .gitignore  config.prod.env  config.stage.env  pyproject.toml
run/: pull_browser_images.sh
tests/: __init__.py  conftest.py  test_operations_at_all_filter.py  test_todos_management.py  test_todos_management_old.py
todomvc_tests/: __init__.py  config.py
todomvc_tests/model/: __init__.py  app.py  todomvc_page.py
todomvc_tests/model/controls/: all_list.py  field.py
todomvc_tests/model/pages/: __init__.py  todomvc.py  todomvc_old.py
todomvc_tests/pages/: todomvc.py
